--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
                     scale="0.14768864307354904 0.14768864307354904 0.14768864307354904"
-                    gps-entity-place="latitude: 51.5689365; longitude: -0.3599196;"
+                    gps-entity-place="latitude: 51.568928; longitude: -0.359803;"
                 ></a-entity>
 
             <a-camera gps-camera rotation-reader></a-camera>
