--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a-entity
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
-                    gltf-model="#animated-asset"
+                    gltf-model="#animated-asset" rotation="0 180 0"
                     scale="0.14768864307354904 0.14768864307354904 0.14768864307354904"
                     gps-entity-place="latitude: 51.568928; longitude: -0.359803;"
                 ></a-entity>
