--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset" rotation="0 180 0"
-                    scale="0.14768864307354904 0.14768864307354904 0.14768864307354904"
+                    scale="0.15 0.15 0.15"
                     gps-entity-place="latitude: 51.568928; longitude: -0.359803;"
                 ></a-entity>
 
