--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             renderer="logarithmicDepthBuffer: true;"
             embedded
             loading-screen="enabled: false;"
-            arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'>
+            arjs="sourceType: webcam; debugUIEnabled: false;"
         >
             <a-assets>
                 <a-asset-item
@@ -26,7 +26,7 @@
                 <a-entity
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
-                    gltf-model="#animated-asset" rotation="0 180 0"
+                    gltf-model="#animated-asset" rotation="0 360 0"
                     scale="0.15 0.15 0.15"
                     gps-entity-place="latitude: 51.568928; longitude: -0.359803;"
                 ></a-entity>
