--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <body style="margin: 0; overflow: hidden;">
         <a-scene
             vr-mode-ui="enabled: false"
+            embedded
             renderer="logarithmicDepthBuffer: true;"
             embedded
             loading-screen="enabled: false;"
