--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
         <a-scene
             vr-mode-ui="enabled: false"
             embedded
-            renderer="logarithmicDepthBuffer: true;"
-            embedded
+
             loading-screen="enabled: false;"
             arjs="sourceType: webcam; debugUIEnabled: false;"
         >
@@ -27,6 +26,7 @@
 
                 <a-entity
                     look-at="[gps-camera]"
+                    animation-mixer="loop: repeat"
                     gltf-model="#animated-asset" rotation="0 180 0"
                     scale="0.15 0.15 0.15"
                     gps-entity-place="latitude: 51.568928; longitude: -0.359803;"
