--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
         <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
         <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
-        <!--<script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>-->
+        <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
     </head>
 
     <body style="margin: 0; overflow: hidden;">
@@ -28,7 +28,7 @@
                 <a-entity
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
-                    gltf-model="#animated-asset" rotation="0 180 0"
+                    gltf-model="#animated-asset" rotation="90 180 90"
                     scale="0.01 0.01 0.01"
                     gps-entity-place="latitude: 51.568928; longitude: -0.359803;"
                 ></a-entity>
