--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 <a-entity
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
-                    gltf-model="#animated-asset" rotation="0 180 0"
-                    scale="0.1 0.1 0.1"
+                    gltf-model="#animated-asset"
+                    scale="0.15 0.15 0.15"
                     gps-entity-place="latitude: 51.568928; longitude: -0.359803;"
                 ></a-entity>
 
